--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nfstay",
+  "name": "rwa-nfstay",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.5",
+    "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "postcss": "^8",
