--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
+    "recharts": "^2.12.7",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
