--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "chart.js": "^4.4.4",
     "leaflet": "^1.9.4",
     "next": "14.2.6",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "react-leaflet": "^4.2.1",
     "recharts": "^2.12.7",
     "slick-carousel": "^1.8.1"
   },
