--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.6",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
